# atomphys

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  AUTHORS  CHANGELOG  CITATION.cff  Makefile  QuantumDynamicsColdTrappedIons_Updated_ARC_Style.md  README.md  TODO.md  atomphys  docu.md  mkdocs.yaml  mkdocs.yml  pyproject.toml  pyproject.tomly  pytest.ini  requirements.txt  setup.cfg  setup.py  test.ipynb
.github/workflows/: codeql-analysis.yml  docs.yml  lint.yml  notebook_validation.yml  tests.yml
TIQIatomphys/: state.py  transition.py
TIQIatomphys/calc/: ac_stark.py  polarizability.py  wigner.py
TIQIatomphys/data/: nist.py
_notebooks/: atom_from_database.ipynb  atomphys_plot.ipynb  matrix_element.ipynb  understand_atomphys.ipynb
_tests/: test_term.py
_trash/: _old_README.md
atomphys/: __init__.py  _transition.py  atom.py  electric_field.py  laser.py  load_data.py  plot.py  registry.py  state.py  term.py  transition.py  util.py
atomphys/calc/: Hamiltonians.py  ac_stark.py  angular_momentum.py  coupling.py  hamiltonians.py  hyperfine.py  lindblad_operators.py  linewidths.py  matrix_element.py  polarizability.py  rabi_frequency.py  util.py  wigner.py  zeeman.py
atomphys/calc/qutip_helpers/: hamiltonians.py  lindblad_operators.py
atomphys/data/: json.py  name.py  nist.py
atomphys/data_utils/: cache.py  json.py  load_data.py  name.py  nist.py  udel.py
atomphys/plot_utils/: plot.py
atomphys/tests/: test_transitions.py
atomphys/utils/: coupling.py  quantum_numbers.py  selection_rules.py  term.py  utils.py
docs/: data.md  developers.md  index.md  reference.md
docs/javascripts/: mathjax.js
docs/user-guide/: core.md
docs/user-guide/calculations/: ac_stark_shifts.md  linewidths.md  matrix_elements.md  rabi_frequencies.md
docs/user-guide/core/: atom.md  field.md
docs/user-guide/qutip_helpers.md/: hamiltonians.md  master_equation.md
docs/user_guide/calculations/: ac_stark_shifts.md  linewidths.md  matrix_elements.md  rabi_frequencies.md
docs/user_guide/core/: atom.md  field.md
docs/user_guide/qutip_helpers/: collapse_operators.md  hamiltonians.md  master_equation.md
examples/: Basics.ipynb  calculations_example.ipynb  core_properties_example.ipynb  hamiltonians_example.ipynb
notebooks/: TODO.md  atom_from_database.ipynb  atom_transition_graph.ipynb  atomphys_plot.ipynb  matrix_element.ipynb  test_hamiltonians.ipynb  zeeman_and_hyperfine.ipynb
tests/: conftest.py  test.ipynb  test_ac_stark.py  test_hamiltonians.py  test_hyperfine.py  test_matrix_element.py  test_polarizability.py  test_zeeman.py
