[tool.poetry]
name = "atomphys"
version = "0.1.0"
description = "Atomic physics for Python"
authors = ["Wojciech Adamczyk <wadamczyk@phys.ethz.ch>", "Carmelo Mordini <cmordini@phys.ehtz.ch>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "atomphys", from='.' }]

[tool.poetry.dependencies]
python = "^3.10"
pint = "^0.22"
networkx = "^3.1"
requests = "^2.31.0"
numpy = "^1.25.0"
sympy = "^1.12"
matplotlib = "^3.7.2"
qutip = "^4.7.2"
setuptools = "^73.0.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"
autopep8 = "^2.0.2"
flake8 = "^6.0.0"
pytest = "^7.4.0"
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
