[tool.poetry]
name = "atomphys"
version = "0.1.0"
description = "Atomic physics for Python"
authors = [
    "Carmelo Mordini <cmordini@phys.ehtz.ch>",
    "Wojciech Adamczyk <wadamczyk@phys.ethz.ch>",
    "Matt Grau <mgrau@odu.edu>"
    ]
license = "MIT"
readme = "README.md"
packages = [{ include = "atomphys", from = '.' }]

[tool.poetry.dependencies]
python = "^3.10"
pint = "^0.22"
networkx = "^3.1"
requests = "^2.31.0"
numpy = "^1.25.0"
sympy = "^1.12"
matplotlib = "^3.7.2"
qutip = "^4.7.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"
pytest = "^7.4.0"
pytest-cov = "^6.0.0"
ruff = "^0.7.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.30"
mkdocs-include-markdown-plugin = "^3.9.1"
mkdocstrings = {extras = ["python"], version = "^0.25.2"}
pymdown-extensions = "^10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
