[project]
name = "atomphys"
version = "0.1.0"
description = "Atomic physics for Python"
authors = [
    { name = "Carmelo Mordini", email = "cmordini@phys.ehtz.ch" },
    { name = "Wojciech Adamczyk", email = "wadamczyk@phys.ethz.ch" },
    { name = "Matt Grau", email = "mgrau@odu.edu" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pint>=0.24",
    "networkx>=3.4",
    "requests>=2.33",
    "numpy>=2.2",
    "sympy>=1.14",
    "matplotlib>=3.10",
    "qutip>=5.2",
    "scipy>=1.15",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=7.2",
    "pytest>=9.0",
    "pytest-cov>=7.1",
    "ruff>=0.15",
]
docs = [
    "mkdocs-material>=9.7",
    "mkdocs-include-markdown-plugin>=7.2",
    "mkdocstrings[python]>=1.0",
    "pymdown-extensions>=10.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["atomphys"]

[tool.ruff.lint]
ignore = ["E741"]
